url-shortener/cert/ingress-cert.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tk8s.ru
    secretName: tk8s-ru-tls
  rules:
  - host: tk8s.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-load-balancer-service
            port:
              number: 80
